updated my DB context, Repository and UnitOfWork

--- a/ChatMe.Data/ChatMe.Data.csproj
+++ b/ChatMe.Data/ChatMe.Data.csproj
@@ -7,12 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Context\" />
-    <Folder Include="Implementations\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+    <ProjectReference Include="..\ChatMe.Models\ChatMe.Models.csproj" />
   </ItemGroup>
 
 </Project>
