--- a/ChatMe.API/appsettings.json
+++ b/ChatMe.API/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=YOUR_SERVER_NAME;Database=ChatMeDb;User ID=YOUR_USER;Password=YOUR_PASSWORD;"
+  },
+
+  "JwtSettings": {
+    "Key": "Put_Your_Secret_Key_In_User_Secrets_Not_Here",
+
+
+    // Using a static name is cleaner than localhost
+    "Issuer": "ChatMeApi",
+    "Audience": "ChatMeUser"
+  }
 }
+
+
