--- a/ChatMe.Infrastructure/ChatMe.Infrastructure.csproj
+++ b/ChatMe.Infrastructure/ChatMe.Infrastructure.csproj
@@ -7,10 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Extension\" />
-    <Folder Include="Implementation\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Infrastructure\" />
+    <Folder Include="Infrastructure\" /> 
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.2.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ChatMe.Data\ChatMe.Data.csproj" />
+    <ProjectReference Include="..\ChatMe.Models\ChatMe.Models.csproj" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+    
 
 </Project>
