Created my chat controller, udated my requests and program.cs and migrated my entities

--- a/ChatMe.API/appsettings.json
+++ b/ChatMe.API/appsettings.json
@@ -8,17 +8,19 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=YOUR_SERVER_NAME;Database=ChatMeDb;User ID=YOUR_USER;Password=YOUR_PASSWORD;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ChatMeDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
 
   "JwtSettings": {
-    "Key": "Put_Your_Secret_Key_In_User_Secrets_Not_Here",
+    // This MUST match the C# code: _configuration["JwtSettings:Key"]
+    "Key": "SuperSecretKeyForChatMeAppThatMustBeLongerThan32Characters_ChangeThisInProd!"
+  },
 
 
-    // Using a static name is cleaner than localhost
-    "Issuer": "ChatMeApi",
-    "Audience": "ChatMeUser"
-  }
+  // Using a static name is cleaner than localhost
+  "Issuer": "ChatMeApi",
+  "Audience": "ChatMeUser"
 }
+
 
 
