updated my appsettings

--- a/ChatMe.API/appsettings.json
+++ b/ChatMe.API/appsettings.json
@@ -6,20 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ChatMeDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-
   "JwtSettings": {
-    // This MUST match the C# code: _configuration["JwtSettings:Key"]
-    "Key": "SuperSecretKeyForChatMeAppThatMustBeLongerThan32Characters_ChangeThisInProd!"
-  },
-
-
-  // Using a static name is cleaner than localhost
-  "Issuer": "ChatMeApi",
-  "Audience": "ChatMeUser"
+    "Key": "SuperSecretKeyForChatMeAppThatMustBeLongerThan32Characters_ChangeThisInProd!",
+    "Issuer": "ChatMeApi",
+    "Audience": "ChatMeUser"
+  }
 }
 
 
